pattern_matcher/grammars/CyboxPatternParser.py
# Generated from CyboxPattern.g4 by ANTLR 4.5.3
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class CyboxPatternParser ( Parser ):

    grammarFileName = "CyboxPattern.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'<'", u"'<='", u"'>'", 
                     u"'>='", u"'''", u"':'", u"'.'", u"','", u"')'", u"'('", 
                     u"']'", u"'['", u"'+'", u"<INVALID>", u"'-'", u"'^'", 
                     u"'/'", u"'*'" ]

    symbolicNames = [ u"<INVALID>", u"IntLiteral", u"FloatLiteral", u"HexLiteral", 
                      u"BinaryLiteral", u"StringLiteral", u"BoolLiteral", 
                      u"RegexLiteral", u"TimestampLiteral", u"AND", u"ALONGWITH", 
                      u"OR", u"NOT", u"FOLLOWEDBY", u"LIKE", u"MATCHES", 
                      u"ISSUPERSET", u"ISSUBSET", u"LAST", u"IN", u"START", 
                      u"STOP", u"MILLISECONDS", u"SECONDS", u"MINUTES", 
                      u"HOURS", u"DAYS", u"MONTHS", u"YEARS", u"TRUE", u"FALSE", 
                      u"NULL", u"WITHIN", u"REPEATS", u"TIMES", u"Identifier", 
                      u"EQ", u"NEQ", u"LT", u"LE", u"GT", u"GE", u"QUOTE", 
                      u"COLON", u"DOT", u"COMMA", u"RPAREN", u"LPAREN", 
                      u"RBRACK", u"LBRACK", u"PLUS", u"HYPHEN", u"MINUS", 
                      u"POWER_OP", u"DIVIDE", u"ASTERISK", u"WS", u"COMMENT", 
                      u"LINE_COMMENT" ]

    RULE_pattern = 0
    RULE_observationExpressions = 1
    RULE_observationExpression = 2
    RULE_comparisonExpression = 3
    RULE_comparisonExpressionAnd = 4
    RULE_propTest = 5
    RULE_startStopQualifier = 6
    RULE_withinQualifier = 7
    RULE_repeatedQualifier = 8
    RULE_objectPath = 9
    RULE_objectType = 10
    RULE_firstPathComponent = 11
    RULE_objectPathComponent = 12
    RULE_setLiteral = 13
    RULE_primitiveLiteral = 14
    RULE_orderableLiteral = 15
    RULE_timeUnit = 16

    ruleNames =  [ u"pattern", u"observationExpressions", u"observationExpression", 
                   u"comparisonExpression", u"comparisonExpressionAnd", 
                   u"propTest", u"startStopQualifier", u"withinQualifier", 
                   u"repeatedQualifier", u"objectPath", u"objectType", u"firstPathComponent", 
                   u"objectPathComponent", u"setLiteral", u"primitiveLiteral", 
                   u"orderableLiteral", u"timeUnit" ]

    EOF = Token.EOF
    IntLiteral=1
    FloatLiteral=2
    HexLiteral=3
    BinaryLiteral=4
    StringLiteral=5
    BoolLiteral=6
    RegexLiteral=7
    TimestampLiteral=8
    AND=9
    ALONGWITH=10
    OR=11
    NOT=12
    FOLLOWEDBY=13
    LIKE=14
    MATCHES=15
    ISSUPERSET=16
    ISSUBSET=17
    LAST=18
    IN=19
    START=20
    STOP=21
    MILLISECONDS=22
    SECONDS=23
    MINUTES=24
    HOURS=25
    DAYS=26
    MONTHS=27
    YEARS=28
    TRUE=29
    FALSE=30
    NULL=31
    WITHIN=32
    REPEATS=33
    TIMES=34
    Identifier=35
    EQ=36
    NEQ=37
    LT=38
    LE=39
    GT=40
    GE=41
    QUOTE=42
    COLON=43
    DOT=44
    COMMA=45
    RPAREN=46
    LPAREN=47
    RBRACK=48
    LBRACK=49
    PLUS=50
    HYPHEN=51
    MINUS=52
    POWER_OP=53
    DIVIDE=54
    ASTERISK=55
    WS=56
    COMMENT=57
    LINE_COMMENT=58

    def __init__(self, input):
        super(CyboxPatternParser, self).__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.PatternContext, self).__init__(parent, invokingState)
            self.parser = parser

        def observationExpressions(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObservationExpressionsContext,0)


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_pattern

        def enterRule(self, listener):
            if hasattr(listener, "enterPattern"):
                listener.enterPattern(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPattern"):
                listener.exitPattern(self)




    def pattern(self):

        localctx = CyboxPatternParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pattern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.observationExpressions(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObservationExpressionsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.ObservationExpressionsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def observationExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObservationExpressionContext,0)


        def observationExpressions(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CyboxPatternParser.ObservationExpressionsContext)
            else:
                return self.getTypedRuleContext(CyboxPatternParser.ObservationExpressionsContext,i)


        def ALONGWITH(self):
            return self.getToken(CyboxPatternParser.ALONGWITH, 0)

        def FOLLOWEDBY(self):
            return self.getToken(CyboxPatternParser.FOLLOWEDBY, 0)

        def getRuleIndex(self):
            return CyboxPatternParser.RULE_observationExpressions

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressions"):
                listener.enterObservationExpressions(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressions"):
                listener.exitObservationExpressions(self)



    def observationExpressions(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CyboxPatternParser.ObservationExpressionsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_observationExpressions, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.observationExpression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 44
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CyboxPatternParser.ObservationExpressionsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpressions)
                    self.state = 39
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 40
                    _la = self._input.LA(1)
                    if not(_la==CyboxPatternParser.ALONGWITH or _la==CyboxPatternParser.FOLLOWEDBY):
                        self._errHandler.recoverInline(self)
                    else:
                        self.consume()
                    self.state = 41
                    self.observationExpressions(3) 
                self.state = 46
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ObservationExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.ObservationExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_observationExpression

     
        def copyFrom(self, ctx):
            super(CyboxPatternParser.ObservationExpressionContext, self).copyFrom(ctx)


    class ObservationExpressionRepeatedContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.ObservationExpressionContext)
            super(CyboxPatternParser.ObservationExpressionRepeatedContext, self).__init__(parser)
            self.copyFrom(ctx)

        def observationExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObservationExpressionContext,0)

        def repeatedQualifier(self):
            return self.getTypedRuleContext(CyboxPatternParser.RepeatedQualifierContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionRepeated"):
                listener.enterObservationExpressionRepeated(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionRepeated"):
                listener.exitObservationExpressionRepeated(self)


    class ObservationExpressionSimpleContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.ObservationExpressionContext)
            super(CyboxPatternParser.ObservationExpressionSimpleContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LBRACK(self):
            return self.getToken(CyboxPatternParser.LBRACK, 0)
        def comparisonExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ComparisonExpressionContext,0)

        def RBRACK(self):
            return self.getToken(CyboxPatternParser.RBRACK, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionSimple"):
                listener.enterObservationExpressionSimple(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionSimple"):
                listener.exitObservationExpressionSimple(self)


    class ObservationExpressionCompoundContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.ObservationExpressionContext)
            super(CyboxPatternParser.ObservationExpressionCompoundContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(CyboxPatternParser.LPAREN, 0)
        def observationExpressions(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObservationExpressionsContext,0)

        def RPAREN(self):
            return self.getToken(CyboxPatternParser.RPAREN, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionCompound"):
                listener.enterObservationExpressionCompound(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionCompound"):
                listener.exitObservationExpressionCompound(self)


    class ObservationExpressionWithinContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.ObservationExpressionContext)
            super(CyboxPatternParser.ObservationExpressionWithinContext, self).__init__(parser)
            self.copyFrom(ctx)

        def observationExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObservationExpressionContext,0)

        def withinQualifier(self):
            return self.getTypedRuleContext(CyboxPatternParser.WithinQualifierContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionWithin"):
                listener.enterObservationExpressionWithin(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionWithin"):
                listener.exitObservationExpressionWithin(self)


    class ObservationExpressionStartStopContext(ObservationExpressionContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.ObservationExpressionContext)
            super(CyboxPatternParser.ObservationExpressionStartStopContext, self).__init__(parser)
            self.copyFrom(ctx)

        def observationExpression(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObservationExpressionContext,0)

        def startStopQualifier(self):
            return self.getTypedRuleContext(CyboxPatternParser.StartStopQualifierContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterObservationExpressionStartStop"):
                listener.enterObservationExpressionStartStop(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObservationExpressionStartStop"):
                listener.exitObservationExpressionStartStop(self)



    def observationExpression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CyboxPatternParser.ObservationExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_observationExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            token = self._input.LA(1)
            if token in [CyboxPatternParser.LBRACK]:
                localctx = CyboxPatternParser.ObservationExpressionSimpleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 48
                self.match(CyboxPatternParser.LBRACK)
                self.state = 49
                self.comparisonExpression(0)
                self.state = 50
                self.match(CyboxPatternParser.RBRACK)

            elif token in [CyboxPatternParser.LPAREN]:
                localctx = CyboxPatternParser.ObservationExpressionCompoundContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 52
                self.match(CyboxPatternParser.LPAREN)
                self.state = 53
                self.observationExpressions(0)
                self.state = 54
                self.match(CyboxPatternParser.RPAREN)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 64
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = CyboxPatternParser.ObservationExpressionStartStopContext(self, CyboxPatternParser.ObservationExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpression)
                        self.state = 58
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 59
                        self.startStopQualifier()
                        pass

                    elif la_ == 2:
                        localctx = CyboxPatternParser.ObservationExpressionWithinContext(self, CyboxPatternParser.ObservationExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpression)
                        self.state = 60
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 61
                        self.withinQualifier()
                        pass

                    elif la_ == 3:
                        localctx = CyboxPatternParser.ObservationExpressionRepeatedContext(self, CyboxPatternParser.ObservationExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_observationExpression)
                        self.state = 62
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 63
                        self.repeatedQualifier()
                        pass

             
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ComparisonExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.ComparisonExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def comparisonExpressionAnd(self):
            return self.getTypedRuleContext(CyboxPatternParser.ComparisonExpressionAndContext,0)


        def comparisonExpression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CyboxPatternParser.ComparisonExpressionContext)
            else:
                return self.getTypedRuleContext(CyboxPatternParser.ComparisonExpressionContext,i)


        def OR(self):
            return self.getToken(CyboxPatternParser.OR, 0)

        def getRuleIndex(self):
            return CyboxPatternParser.RULE_comparisonExpression

        def enterRule(self, listener):
            if hasattr(listener, "enterComparisonExpression"):
                listener.enterComparisonExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComparisonExpression"):
                listener.exitComparisonExpression(self)



    def comparisonExpression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CyboxPatternParser.ComparisonExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_comparisonExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.comparisonExpressionAnd(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CyboxPatternParser.ComparisonExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_comparisonExpression)
                    self.state = 72
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 73
                    self.match(CyboxPatternParser.OR)
                    self.state = 74
                    self.comparisonExpression(3) 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ComparisonExpressionAndContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.ComparisonExpressionAndContext, self).__init__(parent, invokingState)
            self.parser = parser

        def propTest(self):
            return self.getTypedRuleContext(CyboxPatternParser.PropTestContext,0)


        def comparisonExpressionAnd(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(CyboxPatternParser.ComparisonExpressionAndContext)
            else:
                return self.getTypedRuleContext(CyboxPatternParser.ComparisonExpressionAndContext,i)


        def AND(self):
            return self.getToken(CyboxPatternParser.AND, 0)

        def getRuleIndex(self):
            return CyboxPatternParser.RULE_comparisonExpressionAnd

        def enterRule(self, listener):
            if hasattr(listener, "enterComparisonExpressionAnd"):
                listener.enterComparisonExpressionAnd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComparisonExpressionAnd"):
                listener.exitComparisonExpressionAnd(self)



    def comparisonExpressionAnd(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CyboxPatternParser.ComparisonExpressionAndContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_comparisonExpressionAnd, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.propTest()
            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CyboxPatternParser.ComparisonExpressionAndContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_comparisonExpressionAnd)
                    self.state = 83
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 84
                    self.match(CyboxPatternParser.AND)
                    self.state = 85
                    self.comparisonExpressionAnd(3) 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PropTestContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(CyboxPatternParser.PropTestContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CyboxPatternParser.RULE_propTest

     
        def copyFrom(self, ctx):
            super(CyboxPatternParser.PropTestContext, self).copyFrom(ctx)



    class PropTestRegexContext(PropTestContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.PropTestContext)
            super(CyboxPatternParser.PropTestRegexContext, self).__init__(parser)
            self.copyFrom(ctx)

        def objectPath(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObjectPathContext,0)

        def MATCHES(self):
            return self.getToken(CyboxPatternParser.MATCHES, 0)
        def RegexLiteral(self):
            return self.getToken(CyboxPatternParser.RegexLiteral, 0)
        def NOT(self):
            return self.getToken(CyboxPatternParser.NOT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterPropTestRegex"):
                listener.enterPropTestRegex(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPropTestRegex"):
                listener.exitPropTestRegex(self)


    class PropTestOrderContext(PropTestContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.PropTestContext)
            super(CyboxPatternParser.PropTestOrderContext, self).__init__(parser)
            self.copyFrom(ctx)

        def objectPath(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObjectPathContext,0)

        def orderableLiteral(self):
            return self.getTypedRuleContext(CyboxPatternParser.OrderableLiteralContext,0)

        def GT(self):
            return self.getToken(CyboxPatternParser.GT, 0)
        def LT(self):
            return self.getToken(CyboxPatternParser.LT, 0)
        def GE(self):
            return self.getToken(CyboxPatternParser.GE, 0)
        def LE(self):
            return self.getToken(CyboxPatternParser.LE, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterPropTestOrder"):
                listener.enterPropTestOrder(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPropTestOrder"):
                listener.exitPropTestOrder(self)


    class PropTestLikeContext(PropTestContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.PropTestContext)
            super(CyboxPatternParser.PropTestLikeContext, self).__init__(parser)
            self.copyFrom(ctx)

        def objectPath(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObjectPathContext,0)

        def LIKE(self):
            return self.getToken(CyboxPatternParser.LIKE, 0)
        def StringLiteral(self):
            return self.getToken(CyboxPatternParser.StringLiteral, 0)
        def NOT(self):
            return self.getToken(CyboxPatternParser.NOT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterPropTestLike"):
                listener.enterPropTestLike(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPropTestLike"):
                listener.exitPropTestLike(self)


    class PropTestEqualContext(PropTestContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.PropTestContext)
            super(CyboxPatternParser.PropTestEqualContext, self).__init__(parser)
            self.copyFrom(ctx)

        def objectPath(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObjectPathContext,0)

        def primitiveLiteral(self):
            return self.getTypedRuleContext(CyboxPatternParser.PrimitiveLiteralContext,0)

        def EQ(self):
            return self.getToken(CyboxPatternParser.EQ, 0)
        def NEQ(self):
            return self.getToken(CyboxPatternParser.NEQ, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterPropTestEqual"):
                listener.enterPropTestEqual(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPropTestEqual"):
                listener.exitPropTestEqual(self)


    class PropTestSetContext(PropTestContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.PropTestContext)
            super(CyboxPatternParser.PropTestSetContext, self).__init__(parser)
            self.copyFrom(ctx)

        def objectPath(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObjectPathContext,0)

        def IN(self):
            return self.getToken(CyboxPatternParser.IN, 0)
        def setLiteral(self):
            return self.getTypedRuleContext(CyboxPatternParser.SetLiteralContext,0)

        def NOT(self):
            return self.getToken(CyboxPatternParser.NOT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterPropTestSet"):
                listener.enterPropTestSet(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPropTestSet"):
                listener.exitPropTestSet(self)


    class PropTestIsSubsetContext(PropTestContext):

        def __init__(self, parser, ctx): # actually a CyboxPatternParser.PropTestContext)
            super(CyboxPatternParser.PropTestIsSubsetContext, self).__init__(parser)
            self.copyFrom(ctx)

        def objectPath(self):
            return self.getTypedRuleContext(CyboxPatternParser.ObjectPathContext,0)

        def ISSUBSET(self):
            return self.getToken(CyboxPatternParser.ISSUBSET, 0)
        def StringLiteral(self):
            return self.getToken(CyboxPatternParser.StringLiteral, 0)
        def NOT(self):
            return self.getToken(CyboxPatternParser.NOT, 0)

        def enterRule(self, listener):
            if hasattr(listener, "enterPropTestIsSubset"):
                listener.enterPropTestIsSubset(self)
